Ruby has had so many changes over the years it's impossible to keep track!