@@ -1,1 +1,2 @@
-Ruby has had so many changes over the years it's impossible to keep track!
+Ruby has had so many changes over the years, it's impossible to keep track!
+new content
